After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 618469 - Inconsistent naming of new untitled files and folders
Inconsistent naming of new untitled files and folders
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 559213 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-05-12 16:41 UTC by Allan Day
Modified: 2011-01-10 16:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Make Create Document and Create Folder use 'untitled %d' filename format (3.59 KB, patch)
2010-07-05 10:10 UTC, Thomas Karpiniec
none Details | Review
[PATCH] Make Create Document and Create Folder use 'untitled (%d)' filename format (3.59 KB, patch)
2010-07-08 07:41 UTC, Thomas Karpiniec
none Details | Review
New folders and empty files are named "Untitled", "Untitled 2", "Untitled 3", ... (3.59 KB, patch)
2010-08-16 10:03 UTC, Thomas Karpiniec
none Details | Review
Make Create Document and Create Folder use "Untitled %d" filename format (3.49 KB, patch)
2011-01-07 18:59 UTC, Marcus Husar
none Details | Review
Make Create Document/Folder use "Untitled File/Folder %d" filename format (2.41 KB, patch)
2011-01-07 19:47 UTC, Marcus Husar
none Details | Review
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format (3.42 KB, patch)
2011-01-08 15:13 UTC, Marcus Husar
none Details | Review
Clean context menu and "File Menu", also use "Create New Folder/Document" (5.24 KB, patch)
2011-01-08 15:17 UTC, Marcus Husar
committed Details | Review
Screenshot showing the enhancements made by the latest two patches (49.52 KB, image/png)
2011-01-08 16:08 UTC, Marcus Husar
  Details
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format (4.26 KB, patch)
2011-01-08 21:43 UTC, Marcus Husar
needs-work Details | Review
Screenshot showing the enhancements made by patches above (48.30 KB, image/png)
2011-01-08 22:01 UTC, Marcus Husar
  Details
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format (3.52 KB, patch)
2011-01-10 13:24 UTC, Marcus Husar
reviewed Details | Review

Description Allan Day 2010-05-12 16:41:21 UTC
The default name given to new files is 'new file'. For new folders it is 'untitled document'. Clearly, this is inconsistent.

The words 'file' and 'document' are not needed in the string, since the icon provides this information. The best solution would therefore be to name both files and folders 'untitled'.
Comment 1 Bastien Nocera 2010-05-20 14:25:26 UTC
What do you call a a file after an "untitled" folder has been created, "untitled #2" with the types being different?
Comment 2 Hylke Bons 2010-05-20 14:27:27 UTC
(In reply to comment #1)
> What do you call a a file after an "untitled" folder has been created,
> "untitled #2" with the types being different?

yes. it doesn't matter what is it.
Comment 3 Marcus Carlson 2010-06-26 22:45:09 UTC
Also see bug 559213 which seems to be a duplicate of this.
Comment 4 Allan Day 2010-06-27 11:04:49 UTC
*** Bug 559213 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Karpiniec 2010-07-05 10:10:49 UTC
Created attachment 165265 [details] [review]
[PATCH] Make Create Document and Create Folder use 'untitled %d' filename format

Also adds a new L10N string "untitled". Any review or suggestions are very welcome.
Comment 6 Hylke Bons 2010-07-05 10:21:21 UTC
why not just have "untitled" instead of "untitled %d"?
you can see from the icon what it is :)
Comment 7 Thomas Karpiniec 2010-07-05 10:27:43 UTC
Sorry if I wasn't clear. The %d represents a number. Completely ignoring whether it's a file or a directory, it begins with "untitled", then progresses to "untitled 2", "untitled 3", etc.

Something in me didn't want to put # characters in filenames if it could be helped, but if that would be better it's trivial to add.
Comment 8 Hylke Bons 2010-07-05 10:30:47 UTC
(In reply to comment #7)
> Sorry if I wasn't clear. The %d represents a number. Completely ignoring
> whether it's a file or a directory, it begins with "untitled", then progresses
> to "untitled 2", "untitled 3", etc.
> 
> Something in me didn't want to put # characters in filenames if it could be
> helped, but if that would be better it's trivial to add.

ah ok, sorry, I scanned a bit too quickly :)
Perhaps we can but brackets around the number like "untitled (3)"?
Comment 9 Marcus Carlson 2010-07-05 10:49:56 UTC
> filename2 = g_strdup_printf ("%s %d", filename, ++count);

Not sure but maybe "%s %d" should be translatable to be have each locale could change this themselves then "untitled (3)", "untitled - 3", "untitled #3" would all be possible.
Comment 10 Thomas Karpiniec 2010-07-08 07:41:25 UTC
Created attachment 165458 [details] [review]
[PATCH] Make Create Document and Create Folder use 'untitled (%d)' filename format

An alternative patch which uses parentheses instead
Comment 11 Thomas Karpiniec 2010-07-08 07:51:48 UTC
(In reply to comment #9)
> > filename2 = g_strdup_printf ("%s %d", filename, ++count);
> 
> Not sure but maybe "%s %d" should be translatable to be have each locale could
> change this themselves then "untitled (3)", "untitled - 3", "untitled #3" would
> all be possible.

It's an interesting idea and I've pondered on it a bit. My conclusion is that the point of this bug is to improve consistency and merely having different punctuation for different locales doesn't really achieve that.

If we want to localise I say we go all the way and use the same code that's used when you copy a file and paste it multiple times and get (copy), (another copy), (3rd copy), (4th copy), etc.

Personally, though, I find these anglicisms annoying mixed in with what is a fairly mechanical operation (making several files). Does anyone have any strong feelings on the issue?
Comment 12 Allan Day 2010-07-08 08:22:49 UTC
(In reply to comment #11)

> Personally, though, I find these anglicisms annoying mixed in with what is a
> fairly mechanical operation (making several files). Does anyone have any strong
> feelings on the issue?

'Untitled 2' 'Untitled 3' seems best to me - it is clean and straightforward.

It's unclear to me whether varying the string is useful from an i10n point of view. 'Untitled (2)' is pretty similar to 'Untitled - 2' as far as I'm concerned, but then I'm not a translator.
Comment 13 Hylke Bons 2010-07-08 10:07:22 UTC
(In reply to comment #12)
> (In reply to comment #11)
> 
> > Personally, though, I find these anglicisms annoying mixed in with what is a
> > fairly mechanical operation (making several files). Does anyone have any strong
> > feelings on the issue?
> 
> 'Untitled 2' 'Untitled 3' seems best to me - it is clean and straightforward.
> 
> It's unclear to me whether varying the string is useful from an i10n point of
> view. 'Untitled (2)' is pretty similar to 'Untitled - 2' as far as I'm
> concerned, but then I'm not a translator.

Exactly. We don't know that. It's very well possibly that some locale wants to do it differently. :)
Comment 14 Allan Day 2010-07-08 10:15:59 UTC
(In reply to comment #13)

> Exactly. We don't know that. It's very well possibly that some locale wants to
> do it differently. :)

Sure. 'Untitled 2' as default with the option to change it to suit locales seems fine to me.
Comment 15 Thomas Karpiniec 2010-08-16 10:03:14 UTC
Created attachment 167949 [details] [review]
New folders and empty files are named "Untitled", "Untitled 2", "Untitled 3", ...

Based on the above discussion this seems to be the most best solution.

It tidies up the naming and adds two new l10n strings "Untitled" and "Untitled %d" which gives pretty good flexibility for translators. Perhaps some languages read better with ordinal numbers in front? I'm not sure, but the possibility is now there.

I've tested against the latest tree, and any further feedback would be much appreciated.
Comment 16 Marcus Husar 2011-01-07 18:59:32 UTC
Created attachment 177774 [details] [review]
Make Create Document and Create Folder use "Untitled %d" filename format

This patch is based on Thomas Karpiniec's patch in comment #15 and compiles cleanly with JHBuild on top of current master. It has one or two small enhancements.
Comment 17 Marcus Husar 2011-01-07 19:47:54 UTC
Created attachment 177776 [details] [review]
Make Create Document/Folder use "Untitled File/Folder %d" filename format

Based on the discussion above and impressions won on other Desktop Environments (KDE 4, Mac OS 10.x) I came to the conclusion that it would be better to be able to distinguish between files and folders by their filename, while they are untitled.

Just think about physically challenged people that cannot "see from the icon what it is" (comment #6) if they have focus on a file or a folder because they have to use screen readers. Even for people that can see icons (like me) this could become a bit confusing or even unpredictable.

Some examples:

 - Dolphin
   * choose "Create New" -> "Folder" in context menu => "New Folder"
   * chooes "Create New" -> "Text File" in context menu => "Text File"

 - Finder
   * choose "New Folder" from the File menu => "Untitled Folder"
   * choose "New File" -> "New Text File" from the File menu => "Untitled"

 - Nautilus (with this patch)
   * choose "Create Folder" from context menu => "Untitled Folder"
   * choose "Create Document" -> "Empty File" from context menu
     => "Untitled File"

An alternative could be "New Folder" respectively "New File".
Comment 18 Hylke Bons 2011-01-07 21:50:18 UTC
(In reply to comment #17)
> Just think about physically challenged people that cannot "see from the icon
> what it is" (comment #6) if they have focus on a file or a folder because they
> have to use screen readers. Even for people that can see icons (like me) this
> could become a bit confusing or even unpredictable.

That's a good point.
We have to make sure we use actions as menu items as well (Finder clearly this wrong), and use "File" and "Document" consistently.

I would suggest:

- Create New Folder => Untitled Folder
- Create Document   => [submenu] => Spreadsheet  => Untitled Spreadsheet

So basically like your patch, but only using the term "Document" and using the type of document as well (if that's possible to do).
Comment 19 Hylke Bons 2011-01-07 21:51:32 UTC
> - Create Document   => [submenu] => Spreadsheet  => Untitled Spreadsheet

Oops, that should be "Create New Document" for consistency.
Comment 20 Marcus Husar 2011-01-08 15:13:44 UTC
Created attachment 177833 [details] [review]
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format
Comment 21 Marcus Husar 2011-01-08 15:17:19 UTC
Created attachment 177834 [details] [review]
Clean context menu and "File Menu", also use "Create New Folder/Document"
Comment 22 Marcus Husar 2011-01-08 16:08:51 UTC
Created attachment 177839 [details]
Screenshot showing the enhancements made by the latest two patches

The patch attached to comment #20 is an enhancement of the one attached to comment #17 which is now obsolete. Instead of "Untitled File %d" it uses "Untitled Document %d". If a new document is created from a template called "Spreadsheet" a file initially called "Untitled Spreadsheet" is created.

Due to the patch in comment #21 parts of the context menu and also parts of the "File" menu, and also the context menu in the sidebar's tree view (they are partly the same) are changed corresponding to Hylke Bons' suggestions.

They now use "Create New Folder", "Create New Document", "Empty Document" instead of "Create Folder", "Create Document", "Empty File".

One last enhancement one could think of is the numbering of template files. If you put a file called Spreadsheet.ods into your ~/Templates folder you get a menu item "Create New Document" -> "Spreadsheet". The first document created will be "Untitled Spreadsheet.ods", the second one "Untitled Spreadsheet.ods 2". It would be better to have "Untitled Spreadsheet 2.ods" instead. A copy of this document would then be called "Untitled Spreadsheet 2 (copy).ods".
Comment 23 Hylke Bons 2011-01-08 16:16:59 UTC
(In reply to comment #22) 
> One last enhancement one could think of is the numbering of template files. If
> you put a file called Spreadsheet.ods into your ~/Templates folder you get a
> menu item "Create New Document" -> "Spreadsheet". The first document created
> will be "Untitled Spreadsheet.ods", the second one "Untitled Spreadsheet.ods
> 2". It would be better to have "Untitled Spreadsheet 2.ods" instead. A copy of
> this document would then be called "Untitled Spreadsheet 2 (copy).ods".


Yes. Thanks for sorting this out :)
Comment 24 Marcus Husar 2011-01-08 21:43:10 UTC
Created attachment 177846 [details] [review]
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format

This is a new version of the patch seen in comment #20. Some changes make sure that a template filename is numbered properly.

Some examples:
 * "Untitled Spreadsheet.ods"
 * "Untitled Spreadsheet 2.ods"
 * "Untitled Spreadsheet 2 (copy).ods"

To also clean the context menu and "File" menu the patch attached to comment #21 is needed.
Comment 25 Marcus Husar 2011-01-08 22:01:45 UTC
Created attachment 177848 [details]
Screenshot showing the enhancements made by patches above

Here is a new screenshot. ;-)
Comment 26 Cosimo Cecchi 2011-01-10 10:40:03 UTC
Review of attachment 177846 [details] [review]:

Thanks for the patch; looks mostly good, with some comments below.

::: libnautilus-private/nautilus-file-operations.c
@@ +5839,3 @@
+				}
+				templates_directory = nautilus_get_templates_directory ();
+				if (g_strcmp0 ((const char *)parent_path, (const char *)templates_directory) == 0) {

Why is this a special case? job->src should always be a file in a template directory, as it is only set in file_operations_new_file_from_template(), so parent_path == template directory should always be true, or am I missing something?

Also, these casts to (const char *) should not be necessary here.

@@ +5938,3 @@
 				new_filename = g_strdup (filename);
+			} else {
+				parse_template_filename (filename, &filename_base, &suffix);

You could probably use eel_filename_strip_extension() and friends instead of rewriting your implementation for this.
Comment 27 Cosimo Cecchi 2011-01-10 10:43:16 UTC
Review of attachment 177834 [details] [review]:

Looks good, thanks.
Comment 28 Marcus Husar 2011-01-10 13:24:13 UTC
Created attachment 177934 [details] [review]
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format

Here is a new version which uses eel_filename_strip_extension() and doesn't unnecessarily check for the parent of template files. It is rebased on origin/master.

Thanks for your hints.
Comment 29 Cosimo Cecchi 2011-01-10 16:39:26 UTC
Comment on attachment 177834 [details] [review]
Clean context menu and "File Menu", also use "Create New Folder/Document"

Pushed to master.
Comment 30 Cosimo Cecchi 2011-01-10 16:39:44 UTC
Comment on attachment 177934 [details] [review]
Make Create Document/Folder use "Untitled Document/Template/Folder %d" filename format

Pushed to master with a little tweak.
Comment 31 Cosimo Cecchi 2011-01-10 16:43:04 UTC
Marcus, thanks for your work.
I pushed your patches to master, with some little tweaks to the filename suffix computation in the second one, see [1] for details.

Closing as FIXED.

[1] http://git.gnome.org/browse/nautilus/commit/?id=ac168820fbb4db7fbdf243a0d6b118ce445cdf37