Clean context menu and "File" menu (#618469)

Also use "Create New Folder/Document".

Part of https://bugzilla.gnome.org/show_bug.cgi?id=618469